# changers

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-MIT.md  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  test.yml
changers/: all.html  index.html  sidebar-items.js
changers/cli/: enum.CliError.html  index.html  sidebar-items.js  struct.Config.html
changers/cli/config/: index.html  sidebar-items.js  struct.Config.html
changers/cli/err/: enum.CliError.html  index.html  sidebar-items.js
changers/logic/: enum.LogicError.html  fn.make_change.html  index.html  sidebar-items.js
changers/logic/change/: fn.amount_coins.html  fn.change_making_matrix.html  fn.make_change.html  index.html  sidebar-items.js  type.ChangeMatrix.html
changers/logic/coins/: fn.longest_coin.html  fn.normalize.html  fn.normalize_coins.html  index.html  sidebar-items.js
changers/logic/decimals/: fn.precision.html  fn.round.html  index.html  sidebar-items.js
changers/logic/err/: enum.LogicError.html  index.html  sidebar-items.js
examples/: coins.txt  junk.txt
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: cli.rs  lib.rs  logic.rs  main.rs
src/changers/: cli.rs.html  lib.rs.html  logic.rs.html
src/cli/: config.rs  err.rs
src/logic/: change.rs  coins.rs  decimals.rs  err.rs
tests/: integration_test.rs
(+6 files in other folders)
